--- a/Lab1/design.css
+++ b/Lab1/design.css
@@ -12,6 +12,16 @@ padding: 12px 20px;
 margin: 8px 0;	
 box-sizing:border-box;	
 }
+textarea{
+	width=100%;
+	height:150px;
+	padding:12px 20px;
+	box-sizing:border-box;
+	border:2px solid #ccc;
+	border-radius:4px;
+	background-color:#f8f8f8;
+	resize:none;
+}
 #signature {
   text-align: right;
   color: red;
