--- a/Lab1/styles/design.css
+++ b/Lab1/styles/design.css
@@ -1,16 +1,28 @@
 html {
   background-color: white;
 }
-h1 {
+h2 {
 text-align:center;	
 padding:20px 0;
 
 }
+h3 {
+  height: 100%;
+  color: #777;
+  line-height: 1.8;
+  background-color: #3CBC8D;
+}
+
 input[type=text]{
 width:100%
 padding: 12px 20px;	
 margin: 8px 0;	
 box-sizing:border-box;	
+}
+img {
+  display: block;
+  margin: 0 auto;
+  align: center;
 }
 textarea{
 	width=100%;
@@ -22,6 +34,39 @@ textarea{
 	background-color:#f8f8f8;
 	resize:none;
 }
+/* Defining styling for a specific element type - large block buttons */
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #ffff66;  /* yellow */
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}	
+.content{
+	max-width:600px;
+	margin: auto;
+}
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.btn {
+  color:#000000;
+  border: none;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
 #signature {
   text-align: right;
   color: red;
@@ -32,6 +77,52 @@ textarea{
   padding:40px 0;
   background-color:#ffffff;
   color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
 }
 
 .footer-basic .copyright {
