--- a/Lab3/styles/style.css
+++ b/Lab3/styles/style.css
@@ -28,6 +28,16 @@
   background-color: #ccc;
 }
 
+h1{
+  background-color: #264653;
+  font-size: 40px;
+  text-align: center;
+  margin: 0px;
+  padding: 40px 0;
+	color: #FFFFFF;  /* white text */
+
+}
+
 /* Style the tab content */
 .tabcontent {
   display: none;
