--- a/Lab5/styles/styles.css
+++ b/Lab5/styles/styles.css
@@ -64,3 +64,12 @@ color:#FFF;
   color:#aaa;
   margin-bottom:0;
 }
+label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
+}
+
+input,
+label {
+    margin: .4rem 0;
+}
